Replace game logic with RoyalUr-Java